cha-pre-live-flux2/cha-eks-5b/namespaces/tesla-kafka-automation-systest/network-policy-defaults.yaml
---
#########################################
## deny all ingress and egress traffic ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-all
  namespace: tesla-kafka-automation-systest
spec:
  podSelector: {}
  ingress: []
  egress: []

---

#########
## DNS ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-allow-dns
  namespace: tesla-kafka-automation-systest
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP

---

################
## monitoring ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-allow-monitoring
  namespace: tesla-kafka-automation-systest
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
      namespaceSelector:
        matchLabels:
          name: monitoring

---

###########################
## allow internet egress ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-allow-internet-egress
  namespace: tesla-kafka-automation-systest
spec:
  podSelector:
    matchLabels:
      require-internet-egress: "true"
  egress:
  - ports:
    - port: 443
      protocol: TCP

#######################################
---

#########################################
###################################################
## allow access to kube2iam to assume iam roles ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-allow-iam-access
  namespace: tesla-kafka-automation-systest
spec:
  podSelector:
    matchLabels:
      require-iam-access: "true"
  egress:
  - to:
    - ipBlock:
        cidr: 10.52.160.0/24
    ports:
    - port: 8181
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 10.52.161.0/24
    ports:
    - port: 8181
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 10.52.162.0/24
    ports:
    - port: 8181
      protocol: TCP
